@@ -23,6 +23,8 @@ neu:
 - Anwenden 0004-some-small-fixes.diff von TomJoad@vdr-portal.de
   http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1291452-epgsearch-f%C3%BCr-vdr-2-3-x/#post1291452
 - Löschen Alt-Code vor VDR 2.3.x
+- Anwenden 0001-fixed-unresponsive-vdr.diff von TomJoad@vdr-portal.de
+  http://www.vdr-portal.de/board17-developer/board21-vdr-plugins/p1291771-epgsearch-f%C3%BCr-vdr-2-3-x/#post1291771
 
 2013-03-xx: Version 1.0.1 - Maintenance Release
 neu:
